--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -35,6 +35,7 @@
     "History": "طلبات سابقة",
     "Cart": "السلة",
     "Account": "حسابي",
+    "Phone":"رقم الموبايل",
     "pharmacyOrders":"طلبات الصيدلية",
     "Search Restaurants": "البحث",
     "Near Me": "عرض الأقرب لك",
