--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,6 +37,7 @@
     "Account": "حسابي",
     "pharmacyOrders":"طلبات الصيدلية",
     "Search Restaurants": "البحث",
+    "Sorry we not cover your area at this time!":"عفوا .. لا نغطي منطقتك حاليا",
     "Near Me": "عرض الأقرب لك",
     "All Rest": "عرض الكل ",
     "No Restaurants Found!": "لم يتم ايجاد مطاعم",
